# daemon-example

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: pyright-lint.yml
src/thedaemon/: __init__.py  __main__.py  _daemon_unix.py  _daemon_win.py  client.py  constants.py  server.py
