[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "thedaemon"
description = "An simple demonstration of managing daemon processes."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "thegamecracks" }]
license = { text = "MIT" }
dynamic = ["version"]

[project.scripts]
thedaemon = "thedaemon.__main__:main"

[tool.setuptools_scm]

[project.urls]
"Homepage" = "https://github.com/thegamecracks/daemon-example"
"Issue Tracker" = "https://github.com/thegamecracks/daemon-example/issues"
